We have now written the embeddings to redis!

--- a/jupyter/ist769_skol.ipynb
+++ b/jupyter/ist769_skol.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "id": "f9615b87-4962-47ca-b10f-98558713196d",
    "metadata": {},
    "outputs": [],
@@ -132,6 +132,7 @@
     "from pyspark.sql.window import Window\n",
     "\n",
     "import redis\n",
+    "import torch\n",
     "from uuid import uuid4\n",
     "\n",
     "# Local modules\n",
@@ -2362,7 +2363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "id": "ad6c550d-15f4-426c-b11e-d7ac6691e142",
    "metadata": {},
    "outputs": [],
@@ -2409,7 +2410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "a0a79b3c-4ac4-4208-9346-0a5bc90e0bf3",
    "metadata": {},
    "outputs": [],
@@ -2434,7 +2435,7 @@
     "        \"\"\"Run the full embeddings computation pipeline.\n",
     "\n",
     "        Returns:\n",
-    "            pandas.DataFrame: The computed embeddings\n",
+    "            pd.DataFrame: The computed embeddings\n",
     "        \"\"\"\n",
     "        df = descriptions.drop_duplicates(\n",
     "            subset=['description'],\n",
@@ -2446,7 +2447,7 @@
     "            print('Warning: No GPU detected. Using CPU.')\n",
     "\n",
     "        embeddings = self.encode_narratives(df.description.astype(str))\n",
-    "        self.result = pandas.concat([df, embeddings], axis=1)\n",
+    "        self.result = pd.concat([df, embeddings], axis=1)\n",
     "\n",
     "        # Write to Redis if embedding name is specified\n",
     "        if self.embedding_name:\n",
@@ -2473,7 +2474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "id": "8060c0d8-53d6-4501-a312-53522c8ae25b",
    "metadata": {},
    "outputs": [
@@ -2481,7 +2482,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: No taxon records found in database 'skol_taxa_dev'\n"
+      "Loaded 39 taxon records from CouchDB database 'skol_taxa_dev'\n"
      ]
     }
    ],
@@ -2497,7 +2498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "id": "383fbb75-4f00-4cea-b557-fe2cbafbc1d8",
    "metadata": {},
    "outputs": [
@@ -2505,20 +2506,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: No taxon records found in database 'skol_taxa_dev'\n"
+      "Using GPU: NVIDIA GeForce RTX 5090 Laptop GPU\n",
+      "GPU Memory: 25.16 GB\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "SKOL_TAXA.get_descriptions() missing 1 required positional argument: 'self'",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82a3f7841c5a4d12a4a44df0a072fb10",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'pandas' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[29]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m      1\u001b[39m skol_taxa = SKOL_TAXA(\n\u001b[32m      2\u001b[39m     couchdb_url=\u001b[33m\"\u001b[39m\u001b[33mhttp://localhost:5984\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      3\u001b[39m     username=couchdb_username,\n\u001b[32m      4\u001b[39m     password=couchdb_password,\n\u001b[32m      5\u001b[39m     db_name=taxon_db_name\n\u001b[32m      6\u001b[39m )\n\u001b[32m      8\u001b[39m embedder = EmbeddingsComputer(\n\u001b[32m      9\u001b[39m     idir=\u001b[33m'\u001b[39m\u001b[33m/dev/null\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     10\u001b[39m     redis_url=\u001b[33m'\u001b[39m\u001b[33mredis://localhost:6379\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     11\u001b[39m     embedding_name=\u001b[33m'\u001b[39m\u001b[33mskol:embedding:v0.1\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     12\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m embedding_result = \u001b[43membedder\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mSKOL_TAXA\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 23\u001b[39m, in \u001b[36mEmbeddingsComputer.run\u001b[39m\u001b[34m(self, objects)\u001b[39m\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mrun\u001b[39m(\u001b[38;5;28mself\u001b[39m, objects):\n\u001b[32m     18\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Run the full embeddings computation pipeline.\u001b[39;00m\n\u001b[32m     19\u001b[39m \n\u001b[32m     20\u001b[39m \u001b[33;03m    Returns:\u001b[39;00m\n\u001b[32m     21\u001b[39m \u001b[33;03m        pandas.DataFrame: The computed embeddings\u001b[39;00m\n\u001b[32m     22\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m     descriptions = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mobjects2descriptions\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobjects\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     24\u001b[39m     df = descriptions.drop_duplicates(\n\u001b[32m     25\u001b[39m         subset=[\u001b[33m'\u001b[39m\u001b[33mdescription\u001b[39m\u001b[33m'\u001b[39m],\n\u001b[32m     26\u001b[39m         keep=\u001b[33m'\u001b[39m\u001b[33mlast\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     27\u001b[39m         ignore_index=\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m     28\u001b[39m     )\n\u001b[32m     30\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m torch.cuda.is_available():\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/data/piggy/src/github.com/piggyatbaqaqi/dr-drafts-mycosearch/src/compute_embeddings.py:134\u001b[39m, in \u001b[36mEmbeddingsComputer.objects2descriptions\u001b[39m\u001b[34m(self, Objs)\u001b[39m\n\u001b[32m    125\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mobjects2descriptions\u001b[39m(\u001b[38;5;28mself\u001b[39m, Objs: \u001b[38;5;28mlist\u001b[39m):\n\u001b[32m    126\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Convert objects to descriptions.\u001b[39;00m\n\u001b[32m    127\u001b[39m \n\u001b[32m    128\u001b[39m \u001b[33;03m    Args:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    132\u001b[39m \u001b[33;03m        pandas.DataFrame: DataFrame with descriptions read from objects\u001b[39;00m\n\u001b[32m    133\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m134\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m pandas.concat([\u001b[43mobj\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_descriptions\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m obj \u001b[38;5;129;01min\u001b[39;00m Objs],\n\u001b[32m    135\u001b[39m                          ignore_index=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[31mTypeError\u001b[39m: SKOL_TAXA.get_descriptions() missing 1 required positional argument: 'self'"
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[48]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      1\u001b[39m embedder = EmbeddingsComputer(\n\u001b[32m      2\u001b[39m     idir=\u001b[33m'\u001b[39m\u001b[33m/dev/null\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      3\u001b[39m     redis_url=\u001b[33m'\u001b[39m\u001b[33mredis://localhost:6379\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      4\u001b[39m     embedding_name=\u001b[33m'\u001b[39m\u001b[33mskol:embedding:v0.1\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      5\u001b[39m )\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m embedding_result = \u001b[43membedder\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdescriptions\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[46]\u001b[39m\u001b[32m, line 33\u001b[39m, in \u001b[36mEmbeddingsComputer.run\u001b[39m\u001b[34m(self, descriptions)\u001b[39m\n\u001b[32m     30\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mWarning: No GPU detected. Using CPU.\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     32\u001b[39m embeddings = \u001b[38;5;28mself\u001b[39m.encode_narratives(df.description.astype(\u001b[38;5;28mstr\u001b[39m))\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m \u001b[38;5;28mself\u001b[39m.result = \u001b[43mpandas\u001b[49m.concat([df, embeddings], axis=\u001b[32m1\u001b[39m)\n\u001b[32m     35\u001b[39m \u001b[38;5;66;03m# Write to Redis if embedding name is specified\u001b[39;00m\n\u001b[32m     36\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.embedding_name:\n",
+      "\u001b[31mNameError\u001b[39m: name 'pandas' is not defined"
      ]
     }
    ],
@@ -2529,7 +2544,7 @@
     "    embedding_name='skol:embedding:v0.1',\n",
     ")\n",
     "\n",
-    "embedding_result = embedder.run([descriptions])"
+    "embedding_result = embedder.run(descriptions)"
    ]
   },
   {
