New SkolClassifierV2 is much more streamlined and symmetric.

--- a/jupyter/ist769_skol.ipynb
+++ b/jupyter/ist769_skol.ipynb
@@ -89,19 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f9615b87-4962-47ca-b10f-98558713196d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/piggy/miniconda3/envs/skol/lib/python3.13/site-packages/couchdb/__init__.py:15: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  __version__ = __import__('pkg_resources').get_distribution('CouchDB').version\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from io import BytesIO\n",
     "import json\n",
@@ -158,12 +149,12 @@
     "import line\n",
     "from line import Line\n",
     "\n",
-    "# Import the SKOL classifier jupyter/ist769_skol.ipynb\n",
-    "from skol_classifier import SkolClassifier as SC, get_file_list\n",
+    "# Import SKOL classifiers\n",
+    "from skol_classifier.classifier_v2 import SkolClassifierV2 as SC, get_file_list\n",
     "from skol_classifier.preprocessing import SuffixTransformer, ParagraphExtractor\n",
     "from skol_classifier.utils import calculate_stats\n",
     "\n",
-    "from taxon import group_paragraphs, Taxon\n"
+    "from taxon import group_paragraphs, Taxon"
    ]
   },
   {
@@ -604,7 +595,7 @@
     "\"\"\"\n",
     "Main classifier module for SKOL text classification\n",
     "\"\"\"\n",
-    "class SkolClassifier(SC):\n",
+    "class SkolClassifierV2(SC):\n",
     "    \"\"\"\n",
     "    Text classifier for taxonomic literature.\n",
     "\n",
@@ -614,15 +605,7 @@
     "    Supports multiple classification models (Logistic Regression, Random Forest)\n",
     "    and feature types (word TF-IDF, suffix TF-IDF, combined).\n",
     "    \"\"\"\n",
-    "\n",
-    "    # def save_to_redis(self) -> bool:\n",
-    "\n",
-    "    # def load_from_redis(self) -> bool:\n",
-    "    # def load_from_couchdb(self, pattern: str = \"*.txt\") -> DataFrame:\n",
-    "\n",
-    "    # def predict_from_couchdb(\n",
-    "\n",
-    "    # def save_to_couchdb(\n"
+    "\n"
    ]
   },
   {
@@ -637,20 +620,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "m4m45o9n97i",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping generation of model skol:classifier:model:v1.2.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Train classifier on annotated data and save to Redis\n",
+    "# Train classifier on annotated data and save to Redis using SkolClassifierV2\n",
     "# Connect to Redis\n",
     "redis_client = redis.Redis(\n",
     "    host='localhost',\n",
@@ -658,22 +633,9 @@
     "    db=0,\n",
     "    decode_responses=False\n",
     ")\n",
-    "classifier_model_name = \"skol:classifier:model:v1.2\"\n",
+    "classifier_model_name = \"skol:classifier:model:v2.0\"\n",
     "\n",
     "if not redis_client.exists(classifier_model_name):\n",
-    "\n",
-    "    # Initialize classifier with Redis connection\n",
-    "    classifier = SkolClassifier(\n",
-    "        spark=spark,\n",
-    "        redis_client=redis_client,\n",
-    "        redis_key=classifier_model_name,\n",
-    "        auto_load=False,  # Don't auto-load, we want to train fresh\n",
-    "        couchdb_url=couchdb_url,\n",
-    "        database=ingest_db_name,\n",
-    "        username=couchdb_username,\n",
-    "        password=couchdb_password\n",
-    "    )\n",
-    "    \n",
     "    # Get annotated training files\n",
     "    annotated_path = Path.cwd().parent / \"data\" / \"annotated\"\n",
     "    print(f\"Loading annotated files from: {annotated_path}\")\n",
@@ -684,26 +646,27 @@
     "        if len(annotated_files) > 0:\n",
     "            print(f\"Found {len(annotated_files)} annotated files\")\n",
     "            \n",
-    "            # Train the classifier\n",
-    "            print(\"Training classifier...\")\n",
-    "            results = classifier.fit(\n",
-    "                annotated_files,\n",
-    "                model_type='logistic',\n",
+    "            # Train using SkolClassifierV2 with unified API\n",
+    "            print(\"Training classifier with SkolClassifierV2...\")\n",
+    "            classifier = SkolClassifierV2(\n",
+    "                spark=spark,\n",
+    "                input_source='files',\n",
+    "                file_paths=annotated_files,\n",
+    "                model_storage='redis',\n",
+    "                redis_client=redis_client,\n",
+    "                redis_key=classifier_model_name,\n",
+    "                line_level=True,\n",
     "                use_suffixes=False,\n",
-    "                line_level=True\n",
+    "                model_type='logistic'\n",
     "            )\n",
     "            \n",
-    "            print(f\"Training complete!\")\n",
-    "            print(f\"  Accuracy: {results['accuracy']:.4f}\")\n",
-    "            print(f\"  F1 Score: {results['f1_score']:.4f}\")\n",
-    "            print(f\"  Labels: {classifier.labels}\")\n",
+    "            # Train the model\n",
+    "            results = classifier.fit()\n",
     "            \n",
-    "            # Save model to Redis\n",
-    "            print(\"\\nSaving model to Redis...\")\n",
-    "            if classifier.save_to_redis():\n",
-    "                print(f\"✓ Model successfully saved to Redis with key: {classifier_model_name}.\")\n",
-    "            else:\n",
-    "                print(\"✗ Failed to save model to Redis\")\n",
+    "            print(f\"Training complete!\")\n",
+    "            print(f\"  Accuracy: {results.get('accuracy', 0):.4f}\")\n",
+    "            print(f\"  F1 Score: {results.get('f1_score', 0):.4f}\")\n",
+    "            print(f\"✓ Model automatically saved to Redis with key: {classifier_model_name}\")\n",
     "        else:\n",
     "            print(f\"No annotated files found in {annotated_path}\")\n",
     "    else:\n",
@@ -725,59 +688,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "dd6b1621-bb26-4cf1-84cb-3b74453741aa",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model loaded with labels: ['Misc-exposition', 'Description', 'Nomenclature']\n",
-      "\n",
-      "Loading and classifying documents from CouchDB...\n",
-      "\n",
-      "Sample predictions:\n",
-      "+--------------------------------+---------------+---------------+\n",
-      "|                          doc_id|attachment_name|predicted_label|\n",
-      "+--------------------------------+---------------+---------------+\n",
-      "|0020c88329ed456a95a18e0c219269f4|    article.txt|Misc-exposition|\n",
-      "|0020c88329ed456a95a18e0c219269f4|    article.txt|Misc-exposition|\n",
-      "|0020c88329ed456a95a18e0c219269f4|    article.txt|Misc-exposition|\n",
-      "|0020c88329ed456a95a18e0c219269f4|    article.txt|Misc-exposition|\n",
-      "|0020c88329ed456a95a18e0c219269f4|    article.txt|Misc-exposition|\n",
-      "+--------------------------------+---------------+---------------+\n",
-      "only showing top 5 rows\n",
-      "\n",
-      "\n",
-      "Saving predictions back to CouchDB...\n",
-      "(Each partition writes its documents using a single connection)\n",
-      "\n",
-      "Saved 2099 annotated files to CouchDB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "classifier = SkolClassifier(\n",
+    "# Predict from CouchDB and save back to CouchDB using SkolClassifierV2\n",
+    "print(\"Initializing classifier with unified V2 API...\")\n",
+    "classifier = SkolClassifierV2(\n",
     "    spark=spark,\n",
+    "    input_source='couchdb',\n",
+    "    couchdb_url=couchdb_url,\n",
+    "    couchdb_database=ingest_db_name,\n",
+    "    couchdb_username=couchdb_username,\n",
+    "    couchdb_password=couchdb_password,\n",
+    "    couchdb_pattern='*.txt',\n",
+    "    output_dest='couchdb',\n",
+    "    output_couchdb_suffix='.ann',\n",
+    "    model_storage='redis',\n",
     "    redis_client=redis_client,\n",
     "    redis_key=classifier_model_name,\n",
-    "    auto_load=True,\n",
-    "    couchdb_url=couchdb_url,\n",
-    "    database=ingest_db_name,\n",
-    "    username=couchdb_username,\n",
-    "    password=couchdb_password\n",
+    "    auto_load_model=True,\n",
+    "    line_level=True,\n",
+    "    coalesce_labels=True,\n",
+    "    output_format='annotated'\n",
     ")\n",
     "\n",
-    "if classifier.labels is None:\n",
-    "    raise ValueError(\"No model found in Redis. Please train a model first.\")\n",
+    "print(f\"Model loaded from Redis: {classifier_model_name}\")\n",
     "\n",
-    "print(f\"Model loaded with labels: {classifier.labels}\")\n",
-    "\n",
+    "# Load, predict, and save in a streamlined workflow\n",
     "print(\"\\nLoading and classifying documents from CouchDB...\")\n",
-    "predictions = classifier.predict_from_couchdb(pattern=\"*.txt\", line_level=True)\n",
+    "raw_df = classifier.load_raw()\n",
+    "print(f\"Loaded {raw_df.count()} text documents\")\n",
+    "\n",
+    "print(\"\\nMaking predictions...\")\n",
+    "predictions = classifier.predict(raw_df)\n",
     "\n",
     "# Show sample predictions\n",
     "print(\"\\nSample predictions:\")\n",
@@ -785,21 +732,11 @@
     "    \"doc_id\", \"attachment_name\", \"predicted_label\"\n",
     ").show(5, truncate=50)\n",
     "\n",
-    "# Save results back to CouchDB using distributed writes\n",
+    "# Save results back to CouchDB\n",
     "print(\"\\nSaving predictions back to CouchDB...\")\n",
-    "print(\"(Each partition writes its documents using a single connection)\")\n",
-    "results = classifier.save_to_couchdb(predictions=predictions, suffix=\".ann\", coalesce_labels=True)\n",
+    "classifier.save_annotated(predictions)\n",
     "\n",
-    "# Report results\n",
-    "successful = sum(1 for r in results if r['success'])\n",
-    "failed = len(results) - successful\n",
-    "\n",
-    "print(f\"\\nSaved {successful} annotated files to CouchDB\")\n",
-    "if failed > 0:\n",
-    "    print(f\"Failed to save {failed} files\")\n",
-    "    for r in results:\n",
-    "        if not r['success']:\n",
-    "            print(f\"  {r['doc_id']}/{r['attachment_name']}\")\n"
+    "print(f\"\\n✓ Predictions saved to CouchDB as .ann attachments\")"
    ]
   },
   {
