Mistral failing due to missing _id field.

--- a/jupyter/ist769_skol.ipynb
+++ b/jupyter/ist769_skol.ipynb
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "0t94fhxca6tp",
    "metadata": {},
    "outputs": [
@@ -1276,19 +1276,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/piggy/miniconda3/envs/skol/lib/python3.13/site-packages/couchdb/__init__.py:15: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  __version__ = __import__('pkg_resources').get_distribution('CouchDB').version\n",
-      "[Stage 10:>                                                         (0 + 2) / 2]\n",
-      "=== parse_annotated Label Summary ===\n",
-      "Total labels counted: 46616\n",
-      "\n",
-      "Label distribution:\n",
-      "  Misc-exposition            23690 ( 50.8%)\n",
-      "  Description                17481 ( 37.5%)\n",
-      "  Nomenclature                5444 ( 11.7%)\n",
-      "  None                           1 (  0.0%)\n",
-      "========================================\n",
-      "\n",
+      "[Stage 21:>                                                         (0 + 2) / 2]\n",
       "=== parse_annotated Label Summary ===\n",
       "Total labels counted: 46347\n",
       "\n",
@@ -1298,11 +1286,17 @@
       "  Nomenclature                5287 ( 11.4%)\n",
       "  None                           1 (  0.0%)\n",
       "========================================\n",
-      "/home/piggy/miniconda3/envs/skol/lib/python3.13/site-packages/couchdb/__init__.py:15: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  __version__ = __import__('pkg_resources').get_distribution('CouchDB').version\n",
-      "/home/piggy/miniconda3/envs/skol/lib/python3.13/site-packages/couchdb/__init__.py:15: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  __version__ = __import__('pkg_resources').get_distribution('CouchDB').version\n",
-      "[Stage 10:=============================>                            (1 + 1) / 2]"
+      "\n",
+      "=== parse_annotated Label Summary ===\n",
+      "Total labels counted: 46616\n",
+      "\n",
+      "Label distribution:\n",
+      "  Misc-exposition            23690 ( 50.8%)\n",
+      "  Description                17481 ( 37.5%)\n",
+      "  Nomenclature                5444 ( 11.7%)\n",
+      "  None                           1 (  0.0%)\n",
+      "========================================\n",
+      "                                                                                "
      ]
     },
     {
@@ -1314,6 +1308,47 @@
       "+-------+-----+\n",
       "|true   |5239 |\n",
       "+-------+-----+\n",
+      "\n",
+      "\n",
+      "Error messages:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/piggy/miniconda3/envs/skol/lib/python3.13/site-packages/couchdb/__init__.py:15: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  __version__ = __import__('pkg_resources').get_distribution('CouchDB').version\n",
+      "[Stage 24:>                                                         (0 + 2) / 2]\n",
+      "=== parse_annotated Label Summary ===\n",
+      "Total labels counted: 46347\n",
+      "\n",
+      "Label distribution:\n",
+      "  Misc-exposition            23583 ( 50.9%)\n",
+      "  Description                17476 ( 37.7%)\n",
+      "  Nomenclature                5287 ( 11.4%)\n",
+      "  None                           1 (  0.0%)\n",
+      "========================================\n",
+      "\n",
+      "=== parse_annotated Label Summary ===\n",
+      "Total labels counted: 46616\n",
+      "\n",
+      "Label distribution:\n",
+      "  Misc-exposition            23690 ( 50.8%)\n",
+      "  Description                17481 ( 37.5%)\n",
+      "  Nomenclature                5444 ( 11.7%)\n",
+      "  None                           1 (  0.0%)\n",
+      "========================================\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+\n",
+      "|error_message|\n",
+      "+-------------+\n",
+      "+-------------+\n",
       "\n"
      ]
     },
@@ -1321,18 +1356,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                "
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'failed' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m results_df.groupBy(\u001b[33m\"\u001b[39m\u001b[33msuccess\u001b[39m\u001b[33m\"\u001b[39m).count().show(truncate=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# If there are failures, show error messages\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mfailed\u001b[49m > \u001b[32m0\u001b[39m:\n\u001b[32m     10\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mError messages:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     11\u001b[39m     results_df.filter(\u001b[33m\"\u001b[39m\u001b[33msuccess = false\u001b[39m\u001b[33m\"\u001b[39m).select(\u001b[33m\"\u001b[39m\u001b[33merror_message\u001b[39m\u001b[33m\"\u001b[39m).distinct().show(truncate=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'failed' is not defined"
+      "[Stage 24:=============================>                            (1 + 1) / 2]"
      ]
     }
    ],
@@ -1465,10 +1489,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "904ef2d8-ce08-400a-91d6-f089d0f2e4cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TaxaJSONTranslator initialized\n",
+      "  Base model: mistralai/Mistral-7B-Instruct-v0.3\n",
+      "  Checkpoint: None (using base model)\n",
+      "  Device: cuda\n",
+      "  4-bit quantization: True\n"
+     ]
+    }
+   ],
    "source": [
     "translator = TaxaJSONTranslator(\n",
     "    spark=spark,\n",
@@ -1491,10 +1527,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "5f3b6128-af59-464c-8ed0-46ac9eb11ce8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Translating descriptions to JSON (batch mode)...\n",
+      "  Input column: description\n",
+      "  Output column: json_annotated\n",
+      "  Batch size: 10\n"
+     ]
+    },
+    {
+     "ename": "AnalysisException",
+     "evalue": "[UNRESOLVED_COLUMN.WITH_SUGGESTION] A column or function parameter with name `_id` cannot be resolved. Did you mean one of the following? [`taxon`, `source`, `description`, `line_number`, `page_number`].;\n'Project ['_id, taxon#790, description#791]\n+- GlobalLimit 3\n   +- LocalLimit 3\n      +- LogicalRDD [taxon#790, description#791, source#792, line_number#793, paragraph_number#794, page_number#795, empirical_page_number#796], false\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAnalysisException\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m descriptions_df = extractor.load_taxa(pattern=\u001b[33m\"\u001b[39m\u001b[33m*\u001b[39m\u001b[33m\"\u001b[39m).limit(\u001b[32m3\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m json_annotated_df = \u001b[43mtranslator\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtranslate_descriptions_batch\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtaxa_df\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdescriptions_df\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdescription_col\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdescription\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m    \u001b[49m\u001b[43moutput_col\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mjson_annotated\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\n\u001b[32m      8\u001b[39m \u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/data/piggy/src/github.com/piggyatbaqaqi/skol/taxa_json_translator.py:404\u001b[39m, in \u001b[36mTaxaJSONTranslator.translate_descriptions_batch\u001b[39m\u001b[34m(self, taxa_df, description_col, output_col, batch_size)\u001b[39m\n\u001b[32m    401\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m  Batch size: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbatch_size\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    403\u001b[39m \u001b[38;5;66;03m# Collect descriptions with _id for joining\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m404\u001b[39m descriptions = \u001b[43mtaxa_df\u001b[49m\u001b[43m.\u001b[49m\u001b[43mselect\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m_id\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtaxon\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdescription_col\u001b[49m\u001b[43m)\u001b[49m.collect()\n\u001b[32m    405\u001b[39m total = \u001b[38;5;28mlen\u001b[39m(descriptions)\n\u001b[32m    407\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mProcessing \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtotal\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m descriptions...\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/skol/lib/python3.13/site-packages/pyspark/sql/dataframe.py:3229\u001b[39m, in \u001b[36mDataFrame.select\u001b[39m\u001b[34m(self, *cols)\u001b[39m\n\u001b[32m   3184\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mselect\u001b[39m(\u001b[38;5;28mself\u001b[39m, *cols: \u001b[33m\"\u001b[39m\u001b[33mColumnOrName\u001b[39m\u001b[33m\"\u001b[39m) -> \u001b[33m\"\u001b[39m\u001b[33mDataFrame\u001b[39m\u001b[33m\"\u001b[39m:  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[32m   3185\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Projects a set of expressions and returns a new :class:`DataFrame`.\u001b[39;00m\n\u001b[32m   3186\u001b[39m \n\u001b[32m   3187\u001b[39m \u001b[33;03m    .. versionadded:: 1.3.0\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m   3227\u001b[39m \u001b[33;03m    +-----+---+\u001b[39;00m\n\u001b[32m   3228\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m3229\u001b[39m     jdf = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_jdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mselect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_jcols\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43mcols\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3230\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m DataFrame(jdf, \u001b[38;5;28mself\u001b[39m.sparkSession)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/skol/lib/python3.13/site-packages/py4j/java_gateway.py:1322\u001b[39m, in \u001b[36mJavaMember.__call__\u001b[39m\u001b[34m(self, *args)\u001b[39m\n\u001b[32m   1316\u001b[39m command = proto.CALL_COMMAND_NAME +\\\n\u001b[32m   1317\u001b[39m     \u001b[38;5;28mself\u001b[39m.command_header +\\\n\u001b[32m   1318\u001b[39m     args_command +\\\n\u001b[32m   1319\u001b[39m     proto.END_COMMAND_PART\n\u001b[32m   1321\u001b[39m answer = \u001b[38;5;28mself\u001b[39m.gateway_client.send_command(command)\n\u001b[32m-> \u001b[39m\u001b[32m1322\u001b[39m return_value = \u001b[43mget_return_value\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1323\u001b[39m \u001b[43m    \u001b[49m\u001b[43manswer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mgateway_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mtarget_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1325\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n\u001b[32m   1326\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(temp_arg, \u001b[33m\"\u001b[39m\u001b[33m_detach\u001b[39m\u001b[33m\"\u001b[39m):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/skol/lib/python3.13/site-packages/pyspark/errors/exceptions/captured.py:185\u001b[39m, in \u001b[36mcapture_sql_exception.<locals>.deco\u001b[39m\u001b[34m(*a, **kw)\u001b[39m\n\u001b[32m    181\u001b[39m converted = convert_exception(e.java_exception)\n\u001b[32m    182\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(converted, UnknownException):\n\u001b[32m    183\u001b[39m     \u001b[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[32m    184\u001b[39m     \u001b[38;5;66;03m# JVM exception message.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m185\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m converted \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    186\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    187\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
+      "\u001b[31mAnalysisException\u001b[39m: [UNRESOLVED_COLUMN.WITH_SUGGESTION] A column or function parameter with name `_id` cannot be resolved. Did you mean one of the following? [`taxon`, `source`, `description`, `line_number`, `page_number`].;\n'Project ['_id, taxon#790, description#791]\n+- GlobalLimit 3\n   +- LocalLimit 3\n      +- LogicalRDD [taxon#790, description#791, source#792, line_number#793, paragraph_number#794, page_number#795, empirical_page_number#796], false\n"
+     ]
+    }
+   ],
    "source": [
     "descriptions_df = extractor.load_taxa(pattern=\"*\").limit(3)\n",
     "\n",
